[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "langsmith-pii-removal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "langchain-openai>=1.0.0",
    "langchain>=1.0.8",
    "langgraph>=1.0.3",
    "langsmith>=0.4.0",
    "langgraph-sdk>=0.2.9",
]
